--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,9 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![R-CMD-check](https://github.com/panukatan/talaan/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/panukatan/talaan/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/panukatan/talaan/branch/main/graph/badge.svg)](https://app.codecov.io/gh/panukatan/talaan?branch=main)
+[![CodeFactor](https://www.codefactor.io/repository/github/panukatan/talaan/badge)](https://www.codefactor.io/repository/github/panukatan/talaan)
 <!-- badges: end -->
 
 The Philippine Statistics Authority (PSA) makes civil registration data publicly available through their monthly updates on numbers of births, deaths, and marriages released via their website. This package provides utilities for accessing and processing the civil registration and vital statistics data released by the PSA.
